tests/parse/error_parallel_by3.co
// RUN: not choreo %s -sa=SEMA 2>&1 | FileCheck %s

__co__ void i_parallel_by3() {
  parallel {p} by [6, 128] {
    int a = 100;
  }
  s : [3, 4];
  parallel {q} by [s];
  parallel {p, q} by [s(0), 1];
}

// CHECK: error: parallel variables are less than their bounds (1 vs. 2).
// CHECK: error: parallel variables are less than their bounds (1 vs. 2).
// CHECK-NOT: error:
